--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,27 @@
 asgiref==3.2.10
 branca==0.7.0
 certifi==2023.11.17
+cffi==1.15.1
 charset-normalizer==3.3.2
 colorama==0.4.6
 cryptography==41.0.7
 Django==3.1
+django-cleanup==8.0.0
 folium==0.15.1
 idna==3.6
 Jinja2==3.1.3
 MarkupSafe==2.1.4
+numpy==1.21.6
+pdfkit==1.0.0
 Pillow==9.1.0
 pycparser==2.21
 pypng==0.20220715.0
+pytz==2023.4
 qrcode==7.4.2
 requests==2.31.0
+six==1.16.0
 sqlparse==0.4.4
-typing-extensions==4.7.1
+typing_extensions==4.7.1
 tzdata==2023.3
 urllib3==2.0.2
-cffi==1.15.1
-numpy==1.21.6
+xyzservices==2023.2.0
